# cyphy_testbed

./: .gitignore  .gitmodules  README.md  comm.sh
model/: CMakeCache.txt  Makefile  cmake_install.cmake  quadrotor_model_codegen  quadrotor_model_thrustrates.cpp
model/quadrotor_mpc_codegen/: acado_common.h  acado_solver.c
ws/src/command_interface/: CMakeLists.txt  guidance.py  package.xml  traj_generator.py
ws/src/command_interface/launch/: commander_launch.launch
ws/src/command_interface/trjgen/: class_trajectory.py  pltly_helpers.py  trjgen_core.py  trjgen_helpers.py
ws/src/commander_interface/: CMakeLists.txt  package.xml
ws/src/commander_interface/exec/: commander_node.cpp
ws/src/commander_interface/include/commander/: commander.hpp
ws/src/commander_interface/src/: commander.cpp
ws/src/commander_interface/srv/: GoTo.srv  Land.srv  Track.srv
ws/src/controller/: CMakeLists.txt  package.xml
ws/src/controller/exec/: autopilot_mpc_instance.cpp  cmd_vel_converter_node.cpp  mellinger_controller_node.cpp
ws/src/controller/include/: angles.h  cmd_vel_converter.h  mellinger_controller.h  mpc_wrapper.h  pwm.h  types.h
ws/src/controller/mpc_controller/: mpc_controller.cpp
ws/src/controller/src/: cmd_vel_converter.cpp  mellinger_controller (MPC).cpp  mellinger_controller.cpp  mellinger_controller_old.cpp  mpc_controller.cpp  mpc_wrapper.cpp
ws/src/demo_launchers/: CMakeLists.txt  commander_launch.launch  package.xml
ws/src/demo_launchers/launch/: cf_server.launch  commander_launch.launch  controller_launch.launch  datastream_launch.launch  demo_core.launch  ext_control.launch  test_launch.launch
ws/src/guidance/: CMakeLists.txt  guidance.py  guidance_helper.py  guidance_node.py  package.xml  test.py
ws/src/guidance/srv/: GenGoToTrajectory.srv  GenImpTrajectory.srv  GenImpTrajectoryAuto.srv  GenTrackTrajectory.srv
ws/src/guidance/trjgen/: class_pwpoly.py  class_trajectory.py  guidance_helper.py  trjgen_core.py  trjgen_helpers.py
ws/src/monitors/: CMakeLists.txt  package.xml
ws/src/monitors/exec/: ctrl_setpoint_odometry_publisher_node.cpp
ws/src/monitors/include/odometry_publisher/: odometry_publisher.hpp
ws/src/monitors/src/: odometry_publisher.cpp  setpoint_ghost_pub.cpp
ws/src/state_aggregator/: CMakeLists.txt  package.xml
ws/src/state_aggregator/exec/: state_aggregator_node.cpp
ws/src/state_aggregator/include/state_aggregator/: state_aggregator.hpp
ws/src/state_aggregator/launch/: cyphy_rviz.rviz  datastream_launch.launch
ws/src/state_aggregator/src/: state_aggregator.cpp
ws/src/testbed_msgs/: CMakeLists.txt  package.xml
ws/src/testbed_msgs/msg/: ControlSetpoint.msg  CustOdometryStamped.msg  ExtHeader.msg  Latency.msg  NodeStatus.msg  Setpoint.msg  SetpointStamped.msg
ws/src/testbed_srvs/: CMakeLists.txt  package.xml
ws/src/testbed_srvs/srv/: GenGoToTrajectory.srv  GenImpTrajectory.srv  GenImpTrajectoryAuto.srv
