<?xml version="1.0"?>
<package>
	<name>command_interface</name>
	<version>0.0.1</version>
	<description>Commander interface</description>

	<maintainer email="lpannocchi@g.ucla.edu">Luigi Pannocchi</maintainer>

	<license>MIT</license>

	<author email="lpannocchi@g.ucla.edu">Luigi Pannocchi</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>tf</build_depend>

	<build_depend>std_msgs</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>testbed_srvs</build_depend>
	<build_depend>testbed_msgs</build_depend>
	
	<run_depend>tf</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>testbed_srvs</run_depend>
	<run_depend>testbed_msgs</run_depend>

</package>
