<?xml version="1.0"?>
<package>
  <name>commander_interface</name>
  <version>0.0.0</version>
  <description>The testbed commander interface</description>

  <author email="lpannocchi@g.ucla.edu">Luigi Pannocchi</author>
  <maintainer email="lpannocchi@g.ucla.edu">Luigi Pannocchi</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>guidance</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>guidance</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
