<?xml version="1.0"?>
<package format="2">
	<name>controller</name>
	<version>0.0.0</version>
	<description>controller package</description>

  <license>TODO</license>

  <maintainer email="lpannocchi@g.ucla.com">Luigi Pannocchi</maintainer>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>tf</build_depend>

	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>testbed_msgs</build_depend>
	
	<exec_depend>tf</exec_depend>
	<exec_depend>message_runtime</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>testbed_msgs</exec_depend>
</package>
